# rosbag-rs

./: Cargo.toml
src/: lib.rs  msg_iter.rs
src/record_types/: chunk.rs
