[package]
name = "rosbag"
version = "0.6.1"
description = "Utilities for reading ROS bag files."
authors = ["Artyom Pavlov <newpavlov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
documentation = "https://docs.rs/rosbag"
repository = "https://github.com/newpavlov/rosbag-rs"
keywords = ["ros", "datasets", "robotics"]
categories = ["parser-implementations", "science::robotics"]

[dependencies]
byteorder = "1.1"
bzip2-rs = "0.1.2"
base16ct = "0.1"
log = "0.4.4"
lz4_flex = "0.9.5"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
memmap2 = "0.5"
